# scitex-audio

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: cla.yml  publish-pypi.yml  test.yml
docs/sphinx/: api.rst  backends.rst  conf.py  env_vars.rst  index.rst  quickstart.rst  relay.rst
docs/sphinx/api/: engines.rst  mcp.rst  scitex_audio.rst
examples/: 00_run_all.sh  01_speak_basic.py  02_backends_and_voices.py  03_generate_audio_file.py
src/scitex_audio/: __init__.py  __main__.py  _branding.py  _env_loader.py  _env_registry.py  _linter_plugin.py  _relay.py  _speak.py  mcp_server.py
src/scitex_audio/_cli/: __init__.py  _main.py  _mcp_cli.py
src/scitex_audio/_engines/: _base.py  _gtts_engine.py  _luxtts_engine.py
src/scitex_audio/_mcp/: handlers.py  tool_schemas.py
src/scitex_audio/engines/: __init__.py  _luxtts_engine.py
src/scitex_audio/skills/: SKILL.md
tests/: test___main__.py  test__cross_process_lock.py  test__relay.py  test__tts.py
tests/_mcp/: test_handlers_cloud_relay.py
tests/engines/: test_base.py  test_elevenlabs_engine.py  test_gtts_engine.py  test_pyttsx3_engine.py
